--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/react-native-action-sheet": "^3.7.0",
     "@expo/vector-icons": "^10.1.0",
     "@react-native-community/masked-view": "0.1.6",
     "@react-navigation/native": "^5.2.3",
